recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(steps==0){
    return
  }
  avance(length)
  droite(angle)
  tree(steps-1,length*shrink,angle,shrink)
  gauche(angle)
  gauche(angle)
  tree(steps-1,length*shrink,angle,shrink)
  recule(length)
}

subtree()